--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simulasi Squat Interaktif - SMK</title>
+  <title>Squat - SMK</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.9.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/pose-detection"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose"></script>
@@ -127,8 +127,9 @@
 <body>
 
   <div class="title-box">
+    <h1>SMK GAJAH MADA BANYUWANGI</h1>
     <h1>SQUAT COUNTER BERBASIS POSE DETECTION (KECERDASAN BUATAN)</h1>
-    <h1>OLEH TIM GURU OLAH RAGA SMK GAJAH MADA BANYUWANGI</h1>
+    <h1>OLEH SENA ADJI ROMANDA, S.Pd</h1>
   </div>
 
   <div class="main-content">
